--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   margin-top: 100px;
 }
 
-h1 {
+#container h1 {
   text-align: center;
   font-size: 50px;
   margin-bottom: 50px;
@@ -24,7 +24,7 @@ h1 {
 }
 
 .b:hover {
-  background-color: coral;
+  background-color: #aeefec;
 }
 
 #b0,
@@ -45,4 +45,10 @@ h1 {
 
 .winner {
   color: green;
+}
+
+#reset-btn {
+  margin-top: 50px;
+  margin-left: 110px;
+  width: 100px;
 }
